post add screen
post activity and photo adding added.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,9 @@ dependencies {
 
     implementation'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.github.jhavatar:Android-Image-Cropper:2.8.5'
 
-   /* implementation 'com.github.bumptech.glide:glide:4.14.2'
+   /*
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'*/
 
 }
