adding photo with camera
please look into PostActivity.class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.github.jhavatar:Android-Image-Cropper:2.8.5'
 
+    implementation 'com.squareup.picasso:picasso:2.8'
+
    /*
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'*/
 
