--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,11 @@ dependencies {
 
 
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    implementation'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation'com.google.code.gson:gson:2.9.0'
+    implementation'com.squareup.retrofit2:converter-gson:2.3.0'
 
    /*
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'*/
