--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.anbean'
+    namespace 'com.aliberkaygediko.anbean'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.anbean"
+        applicationId "com.aliberkaygediko.anbean"
         minSdk 23
         targetSdk 32
         versionCode 1
@@ -46,7 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-    implementation platform('com.google.firebase:firebase-bom:31.1.0')
+    implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.android.material:material:1.7.0'
 
