--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation'com.google.code.gson:gson:2.9.0'
     implementation'com.squareup.retrofit2:converter-gson:2.3.0'
 
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
    /*
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'*/
 
