--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
+
     <queries>
         <intent>
             <action android:name="android.media.action.IMAGE_CAPTURE" />
@@ -28,8 +29,6 @@
         android:roundIcon="@drawable/ic_icon_squircle"
         android:supportsRtl="true"
         android:theme="@style/Theme.Anbean"
-        android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
             android:name=".OptionsActivity"
@@ -121,6 +120,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <service
+            android:foregroundServiceType="location"
+            android:name=".MainActivity" />
     </application>
+
 
 </manifest>
