--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
    /*
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'*/
 
+    implementation 'com.github.shts:StoriesProgressView:3.0.0'
+
 }
