--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
@@ -59,8 +61,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     implementation'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation'com.google.code.gson:gson:2.9.0'
     implementation'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+
 
     implementation 'com.github.dhaval2404:imagepicker:2.1'
 
@@ -68,5 +71,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'*/
 
     implementation 'com.github.shts:StoriesProgressView:3.0.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
 }
